--- a/todo/index.html
+++ b/todo/index.html
@@ -5,6 +5,7 @@
     <head>
         <title>A blank HTML5 page</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="reset.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="script.js"></script>
@@ -16,9 +17,9 @@
 
             <div id="heading">
 
-                <h1>Todo</h1>
-                <a href="#">New</a>
-                <a href="#">Clean</a>
+                <h1>To-do</h1>
+                <a href="#" class="clean">Clean</a>
+                <a href="#" class="add">Add</a>
 
             </div>
 
