--- a/todo/index.html
+++ b/todo/index.html
@@ -7,7 +7,8 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="reset.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="backbone-min.js"></script>
         <script src="script.js"></script>
     </head>
 
