--- a/todo/index.html
+++ b/todo/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="reset.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="underscore-min.js"></script>
         <script src="backbone-min.js"></script>
         <script src="script.js"></script>
     </head>
@@ -18,41 +19,12 @@
 
             <div id="heading">
 
-                <h1>To-do</h1>
+                <h1>To-do
+                    <span>To do or not to do? To do.</span>
+                </h1>
                 <a href="#" class="clean">Clean</a>
                 <a href="#" class="add">Add</a>
 
-            </div>
-
-            <div id="list">
-                <h2>List title here</h1>
-                <ul>
-                    <li>One</li>
-                    <li>Two</li>
-                    <li>Three</li>
-                    <li>
-                    Four
-
-                    <ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                        <li>
-                        Four
-
-                        <ul>
-                            <li>One</li>
-                            <li>Two</li>
-                            <li>Three</li>
-                        </ul>
-
-                        </li>
-                        <li>five</li>
-                        <li>six</li>
-                    </ul>
-
-                    </li>
-                </ul>
             </div>
 
             <div id="list">
