--- a/todo/index.html
+++ b/todo/index.html
@@ -10,6 +10,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="underscore-min.js"></script>
         <script src="backbone-min.js"></script>
+        <script src="moment.min.js"></script>
         <script src="script.js"></script>
     </head>
 
@@ -30,31 +31,6 @@
             <div id="list">
                 <h2>List title here</h1>
                 <ul>
-                    <li>One</li>
-                    <li>Two</li>
-                    <li>Three</li>
-                    <li>
-                    Four
-
-                    <ul>
-                        <li>One</li>
-                        <li>Two</li>
-                        <li>Three</li>
-                        <li>
-                        Four
-
-                        <ul>
-                            <li>One</li>
-                            <li>Two</li>
-                            <li>Three</li>
-                        </ul>
-
-                        </li>
-                        <li>five</li>
-                        <li>six</li>
-                    </ul>
-
-                    </li>
                 </ul>
             </div>
 
