improved UI, sorting added

--- a/todo/index.html
+++ b/todo/index.html
@@ -23,6 +23,7 @@
                 <h1>To-do
                     <span>To do or not to do? To do.</span>
                 </h1>
+                <a href="#" class="sort">Sort</a>
                 <a href="#" class="clean">Clean</a>
                 <a href="#" class="add">Add</a>
 
