--- a/todo/index.html
+++ b/todo/index.html
@@ -11,6 +11,7 @@
         <script src="underscore-min.js"></script>
         <script src="backbone-min.js"></script>
         <script src="moment.min.js"></script>
+        <script src="backbone.localStorage-min.js"></script>
         <script src="script.js"></script>
     </head>
 
