--- a/todo/index.html
+++ b/todo/index.html
@@ -18,21 +18,23 @@
     <body>
 
         <div id="container">
-            <div id="heading">
-                <input type="text" class="list_name" value="">
-                <a href="#" class="green add_list_btn">Add List</a>
-                <select id="lists">
-                </select>
+            <div id="top">
+                    <input type="text" class="list_name" value="">
+                    <a href="#" class="green add_list_btn">Add List</a>
+                    <select id="lists">
+                    </select>
             </div>
-            <div id="heading">
-                <h1>To-do</h1>
-                <a href="#" class="grey sort">Sort</a>
-                <a href="#" class="grey clean">Remove All Done</a>
-                <a href="#" class="green add">Add Item</a>
-            </div>
-            <div id="list">
-                <ul>
-                </ul>
+            <div id="bottom" class="hidden">
+                <div id="heading">
+                    <h1>To-do</h1>
+                    <a href="#" class="grey sort">Sort</a>
+                    <a href="#" class="grey clean">Remove All Done</a>
+                    <a href="#" class="green add">Add Item</a>
+                </div>
+                <div id="list">
+                    <ul>
+                    </ul>
+                </div>
             </div>
         </div>
 
