--- a/index.html
+++ b/index.html
@@ -1,43 +1,37 @@
 <!doctype html>
-
 <html>
-
-    <head>
-        <title>A blank HTML5 page</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="reset.css" type="text/css" />
-        <link rel="stylesheet" href="style.css" type="text/css" />
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script src="underscore-min.js"></script>
-        <script src="backbone-min.js"></script>
-        <script src="moment.min.js"></script>
-        <script src="backbone.localStorage-min.js"></script>
-        <script src="script.js"></script>
-    </head>
-
-    <body>
-
-        <div id="container">
-            <div id="top">
-                    <input type="text" class="list_name" value="">
-                    <a href="#" class="green add_list_btn">Add List</a>
-                    <select id="lists">
-                    </select>
-            </div>
-            <div id="bottom" class="hidden">
-                <div id="heading">
-                    <h1>To-do</h1>
-                    <a href="#" class="grey sort">Sort</a>
-                    <a href="#" class="grey clean">Remove All Done</a>
-                    <a href="#" class="green add">Add Item</a>
-                </div>
-                <div id="list">
-                    <ul>
-                    </ul>
-                </div>
-            </div>
+<head>
+<title>HTML5 to-do list</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="vendor/reset.css" type="text/css" />
+<link rel="stylesheet" href="static/css/style.css" type="text/css" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="vendor/underscore-min.js"></script>
+<script src="vendor/backbone-min.js"></script>
+<script src="vendor/moment.min.js"></script>
+<script src="vendor/backbone.localStorage-min.js"></script>
+<script src="static/js/script.js"></script>
+</head>
+<body>
+<div id="container">
+    <div id="top">
+        <input type="text" class="list_name" value="">
+        <a href="#" class="green add_list_btn">Add List</a>
+        <select id="lists">
+        </select>
+    </div>
+    <div id="bottom" class="hidden">
+        <div id="heading">
+            <h1>To-do</h1>
+            <a href="#" class="grey sort">Sort</a>
+            <a href="#" class="grey clean">Remove All Done</a>
+            <a href="#" class="green add">Add Item</a>
         </div>
-
-    </body>
-
+        <div id="list">
+            <ul>
+            </ul>
+        </div>
+    </div>
+</div>
+</body>
 </html>
